Criacao do componente product e criacao das rotas do meni

--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,6 +1,8 @@
 <mat-toolbar class="header mat-elevation-z4">
     <span>
-        <a><img class="logo" src="assets/img/logo.png" alt="Logo Coders"></a>
+        <a routerLink="/">
+            <img class="logo" src="assets/img/logo.png" alt="Logo Coders">
+        </a>
     </span>
     <span class="title-group">
         <a>
