Criacao da diretiva red

--- a/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/src/app/components/template/footer/footer.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="footer">
     <span>
         Desenvolvido de
-        <i class="material-icons red vertical-align" >
+        <i class="material-icons vertical-align" appRed>
             favorite
         </i>
         por <span class="red">4</span> 
